A workaround stops the process if the target directory is not writable.

BUG: 117397

svn path=/trunk/extragear/libs/kipi-plugins/; revision=530136